# hamstermatrix

./: CMakeLists.txt  main.cpp
hamstermatrix/: hamstermatrix.ino  triggers.cpp  triggers.h  voltage.cpp  voltage.h
src/: button.cpp  button.h  hamstermatrix.ino  triggers.cpp  triggers.h  voltage.cpp  voltage.h
tools/: hamster.py  post-process.sh  process-codes.py
tools/report/: description.js  report.html  report.js
